--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "electron ."
   },
-  "author": "Alexandre Caussades",
+  "author": "Alexandre Caussades <alexcaussades@gmail.com>",
+  "bugs": {
+    "url": "https://github.com/alexcaussades/ivafly/issues"},
+  "repository": "https://github.com/alexcaussades/ivafly",
   "license": "MIT",
   "dependencies": {
     "@popperjs/core": "^2.9.2",
