--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "file-system": "^2.2.2",
     "jquery": "^3.6.0",
+    "material-design-icons": "^3.0.1",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
