--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "dist": "electron-builder",
-    "pack": "electron-builder --dir"
+    "pack": "electron-builder --dir",
+    "app:build": "electron-builder build"
   },
   "author": "Alexandre Caussades <alexcaussades@gmail.com>",
   "bugs": {
@@ -20,11 +21,8 @@
     "@popperjs/core": "^2.9.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
-    "electron-json-storage": "^4.5.0",
-    "electron-squirrel-startup": "^1.0.0",
     "file-system": "^2.2.2",
     "jquery": "^3.6.0",
-    "material-design-icons": "^3.0.1",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
@@ -34,7 +32,9 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.57",
     "@electron-forge/maker-zip": "^6.0.0-beta.57",
     "electron": "^13.1.2",
-    "electron-builder": "^22.11.7"
+    "electron-builder": "^22.11.7",
+    "electron-json-storage": "^4.5.0",
+    "electron-squirrel-startup": "^1.0.0"
   },
   "config": {
     "forge": {
