--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@popperjs/core": "^2.9.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "electron-store": "^8.0.0",
     "file-system": "^2.2.2",
     "jquery": "^3.6.0",
     "node-fetch": "^2.6.1"
