--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "name": "ivafly",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "",
   "main": "main.js",
   "scripts": {
+    "postinstall": "electron-builder install-app-deps",
     "start": "electron-forge start",
-    "package": "electron-forge package",
+    "package": "npm install && npm run build && electron-packager .",
     "make": "electron-forge make",
     "dist": "electron-builder",
+    "build": "electron-packager .",
     "pack": "electron-builder --dir",
     "app:build": "electron-builder build"
+  },
+  "build": {
+    "productName": "Ivao-Fly",
+    "icon": "app/static/icon.png",
+    "linux": {
+      "category": "Streaming"
+    }
   },
   "author": "Alexandre Caussades <alexcaussades@gmail.com>",
   "bugs": {
@@ -21,7 +30,6 @@
     "@popperjs/core": "^2.9.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
-    "electron-store": "^8.0.0",
     "file-system": "^2.2.2",
     "jquery": "^3.6.0",
     "node-fetch": "^2.6.1"
@@ -35,6 +43,8 @@
     "electron": "^13.1.2",
     "electron-builder": "^22.11.7",
     "electron-json-storage": "^4.5.0",
+    "electron-packager": "^15.2.0",
+    "electron-store": "^8.0.0",
     "electron-squirrel-startup": "^1.0.0"
   },
   "config": {
