--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "bootstrap": "^5.0.1",
     "file-system": "^2.2.2",
     "jquery": "^3.6.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.57",
@@ -44,8 +45,8 @@
     "electron-builder": "^22.11.7",
     "electron-json-storage": "^4.5.0",
     "electron-packager": "^15.2.0",
-    "electron-store": "^8.0.0",
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.0.0"
   },
   "config": {
     "forge": {
