--- a/package.json
+++ b/package.json
@@ -1,79 +1,73 @@
 {
-    "name": "ivafly",
-    "version": "1.1.6",
-    "description": "",
+    "name": "ivao-files-systeme",
+    "productName": "ivao-files-systeme",
+    "version": "1.0.0",
+    "description": "My Electron application description",
     "main": "main.js",
     "scripts": {
-        "postinstall": "electron-builder install-app-deps",
         "start": "electron-forge start",
-        "package": "npm install && npm run build && electron-packager .",
+        "package": "electron-forge package",
         "make": "electron-forge make",
-        "dist": "electron-builder",
-        "build": "electron-packager .",
-        "pack": "electron-builder --dir",
-        "app:build": "electron-builder build"
+        "publish": "electron-forge publish",
+        "lint": "eslint src --color"
     },
-    "build": {
-        "productName": "Ivao-Fly",
-        "icon": "app/static/icon.png",
-        "linux": {
-            "category": "Streaming"
+    "keywords": [],
+    "author": "alexa",
+    "license": "MIT",
+    "config": {
+        "forge": {
+            "make_targets": {
+                "win32": [
+                    "squirrel"
+                ],
+                "darwin": [
+                    "zip"
+                ],
+                "linux": [
+                    "deb",
+                    "rpm"
+                ]
+            },
+            "electronPackagerConfig": {
+                "packageManager": "npm"
+            },
+            "electronWinstallerConfig": {
+                "name": "ivao_files_systeme"
+            },
+            "electronInstallerDebian": {},
+            "electronInstallerRedhat": {},
+            "github_repository": {
+                "owner": "",
+                "name": ""
+            },
+            "windowsStoreConfig": {
+                "packageName": "",
+                "name": "ivaofilessysteme"
+            }
         }
     },
-    "author": "Alexandre Caussades <alexcaussades@gmail.com>",
-    "bugs": {
-        "url": "https://github.com/alexcaussades/ivafly/issues"
-    },
-    "repository": "https://github.com/alexcaussades/ivafly",
-    "license": "MIT",
     "dependencies": {
+        "electron-compile": "^6.4.4",
+        "electron-squirrel-startup": "^1.0.0",
+        "path": "^0.12.7",
         "@popperjs/core": "^2.9.2",
         "axios": "^0.21.1",
         "bootstrap": "^5.0.1",
+        "electron-store": "^8.0.0",
         "file-system": "^2.2.2",
         "jquery": "^3.6.0",
-        "node-fetch": "^2.6.1",
-        "sequelize": "^6.6.2"
+        "node-fetch": "^2.6.1"
     },
     "devDependencies": {
-        "@electron-forge/cli": "^6.0.0-beta.57",
-        "@electron-forge/maker-deb": "^6.0.0-beta.57",
-        "@electron-forge/maker-rpm": "^6.0.0-beta.57",
-        "@electron-forge/maker-squirrel": "^6.0.0-beta.57",
-        "@electron-forge/maker-zip": "^6.0.0-beta.57",
-        "electron": "^13.1.2",
-        "electron-builder": "^22.11.7",
-        "electron-json-storage": "^4.5.0",
-        "electron-packager": "^15.2.0",
-        "electron-squirrel-startup": "^1.0.0",
-        "electron-store": "^8.0.0"
-    },
-    "config": {
-        "forge": {
-            "packagerConfig": {},
-            "makers": [
-                {
-                    "name": "@electron-forge/maker-squirrel",
-                    "config": {
-                        "name": "ivafly"
-                    }
-                },
-                {
-                    "name": "@electron-forge/maker-zip",
-                    "platforms": [
-                        "darwin"
-                    ]
-                },
-                {
-                    "name": "@electron-forge/maker-deb",
-                    "config": {}
-                },
-                {
-                    "name": "@electron-forge/maker-rpm",
-                    "config": {}
-                }
-            ]
-        }
-    },
-    "postinstall": "electron-builder install-app-deps"
+        "babel-plugin-transform-async-to-generator": "^6.24.1",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-react": "^6.24.1",
+        "electron-forge": "^5.2.4",
+        "electron-prebuilt-compile": "8.2.0",
+        "eslint": "^3.19.0",
+        "eslint-config-airbnb": "^15.1.0",
+        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-jsx-a11y": "^5.1.1",
+        "eslint-plugin-react": "^7.24.0"
+    }
 }
