--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ivao-files-systeme",
-    "productName": "ivao-files-systeme",
+    "productName": "IVAFLY",
     "version": "1.1.7",
     "description": "My Electron application description",
     "main": "main.js",
