--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ivao-files-systeme",
+    "name": "IVAFLY",
     "productName": "IVAFLY",
     "version": "1.1.7",
     "description": "My Electron application description",
@@ -11,44 +11,13 @@
         "dist": "electron-builder",
         "pack": "electron-builder --dir",
         "publish": "electron-forge publish",
-        "lint": "eslint src --color"
+        "lint": "eslint src --color",
+        "rebuild": "electron-rebuild"
     },
     "keywords": [],
-    "author": "Alexandre Caussades <alexcaussades@gmail.com>",
+    "author": "Alexandre Caussades",
+    "email": "alexcaussades@gmail.com",
     "license": "MIT",
-    "config": {
-        "forge": {
-            "make_targets": {
-                "win32": [
-                    "squirrel"
-                ],
-                "darwin": [
-                    "zip"
-                ],
-                "linux": [
-                    "deb",
-                    "rpm"
-                ]
-            },
-            "electronPackagerConfig": {
-                "packageManager": "npm"
-            },
-            "electronWinstallerConfig": {
-                "name": "ivao_files_systeme"
-            },
-            "electronInstallerDebian": {},
-            "electronInstallerRedhat": {},
-            "github_repository": {
-                "owner": "https://github.com/alexcaussades/ivafly",
-                "name": "alexcaussades",
-                "issues": "https://github.com/alexcaussades/ivafly/issues"
-            },
-            "windowsStoreConfig": {
-                "packageName": "",
-                "name": "ivaofilessysteme"
-            }
-        }
-    },
     "dependencies": {
         "@popperjs/core": "^2.9.2",
         "axios": "^0.21.1",
@@ -59,17 +28,18 @@
         "file-system": "^1.2.2",
         "jquery": "^3.6.0",
         "node-fetch": "^2.6.1",
-        "path": "^0.12.7",
-        "sqlite3": "^5.0.2"
+        "path": "^0.12.7"
     },
     "devDependencies": {
+        "@electron-forge/cli": "^6.0.0-beta.59",
         "babel-plugin-transform-async-to-generator": "^6.24.1",
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
-        "electron": "^13.1.5",
+        "electron": "^13.1.8",
         "electron-builder": "^22.11.7",
         "electron-forge": "^5.2.4",
         "electron-prebuilt-compile": "^1.3.2",
+        "electron-rebuild": "^1.11.0",
         "eslint": "^3.19.0",
         "eslint-config-airbnb": "^15.1.0",
         "eslint-plugin-import": "^2.23.4",
