--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
         "pack": "electron-builder --dir",
         "publish": "electron-forge publish",
         "lint": "eslint src --color",
-        "rebuild": "electron-rebuild"
+        "rebuild": "electron-rebuild",
+        "postinstall": "electron-builder install-app-deps"
+    },
+    "build": {
+        "asar": false
     },
     "keywords": [],
     "author": "Alexandre Caussades",
@@ -22,13 +26,14 @@
         "@popperjs/core": "^2.9.2",
         "axios": "^0.21.1",
         "bootstrap": "^5.0.1",
-        "electron-compile": "^3.3.6",
+        "electron-compile": "^6.4.4",
         "electron-squirrel-startup": "^1.0.0",
         "electron-store": "^8.0.0",
-        "file-system": "^1.2.2",
+        "file-system": "^2.2.2",
         "jquery": "^3.6.0",
         "node-fetch": "^2.6.1",
-        "path": "^0.12.7"
+        "path": "^0.12.7",
+        "sqlite3": "^5.0.2"
     },
     "devDependencies": {
         "@electron-forge/cli": "^6.0.0-beta.59",
@@ -38,12 +43,12 @@
         "electron": "^13.1.8",
         "electron-builder": "^22.11.7",
         "electron-forge": "^5.2.4",
-        "electron-prebuilt-compile": "^1.3.2",
-        "electron-rebuild": "^1.11.0",
-        "eslint": "^3.19.0",
-        "eslint-config-airbnb": "^15.1.0",
+        "electron-prebuilt-compile": "^8.2.0",
+        "electron-rebuild": "^2.3.5",
+        "eslint": "^7.32.0",
+        "eslint-config-airbnb": "^18.2.1",
         "eslint-plugin-import": "^2.23.4",
-        "eslint-plugin-jsx-a11y": "^5.1.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-react": "^7.24.0",
         "yarn": "^1.22.10"
     }
